<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="no_pic">图片资源没有找到</string>
	
    <string name="app_name">busunit_android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="title_registe">会员注册</string>
    <string name="title_registe_next">下一步</string>
    
    <string name="registe_phone">手机号</string>
    <string name="registe_phone_hint">请输入您的手机号</string>
    <string name="registe_verifycode">验证码</string>
    <string name="registe_verifycode_hint">请输入验证码</string>
    <string name="registe_type">注册类别</string>
    <string name="registe_type_drivers">司机</string>
    <string name="registe_type_users">乘客</string>
</resources>
